--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     
-    <header>
-        <div class="container border">
+    <header class="border">
+        <div class="container">
         <nav class="main-nav">
         <!--logo-->
         <a href="./index.html" lang="en" class="logo"> <span class="logo-first">Web</span>Studio</a>
@@ -52,7 +52,7 @@
 
         </section>
 
-        <section>
+        <section class="section">
         <div class="container">
         <h2 class="titel visually-hidden">Особливості та переваги</h2>
         <ul class="scroll">
@@ -76,7 +76,7 @@
         </div>
         </section>
 
-        <section>
+        <section class="section no-padding">
         <div class="container">
         <h2 class="titel main-title">Чим ми займаємося</h2>
         <ul class="img-item">
@@ -89,7 +89,7 @@
 
         <section class="team">
         <div class="container">
-            <h2 class="titel main-title">
+            <h2 class="titel main-title section">
             Наша команда
             </h2>
             <ul class="team-titel">
@@ -114,7 +114,7 @@
         </section>
         </main>
 
-    <footer class="foot">
+    <footer class="foot section">
         <div class="container">
         <a href="./index.html" lang="en" class="logo-footer"> <span class="logo-first">Web</span>Studio</a>
         <address>
